@@ -1,4 +1,3 @@
-## /usr/bin/firefox-4.0 /usr/bin/firefox
 @LIBDIR@/@APPNAME@ @LIBDIR@/@APPNAME_OTHER@
 usr/lib/@APPNAME@-addons/searchplugins usr/lib/@APPNAME@-addons/searchplugins/common
 usr/lib/@APPNAME@-addons/extensions @LIBDIR@/extensions
@@ -6,3 +5,6 @@ usr/lib/@APPNAME@-addons/plugins @LIBDIR@/plugins
 usr/lib/@APPNAME@-addons/searchplugins @LIBDIR@/searchplugins
 usr/lib/@APPNAME@-addons/searchplugins @LIBDIR@/distribution/searchplugins
 usr/share/myspell/dicts @LIBDIR@/dictionaries
+#ifdef DEB_MIN_SYSDEPS
+@LIBDIR@/@APPNAME@-bin @LIBDIR@/@APPNAME_OTHER@-bin
+#endif
