@@ -1,3 +1,0 @@
-debian/tmp/@LIBDIR@/icons @LIBDIR@
-debian/tmp/@LIBDIR@/chrome/icons @LIBDIR@/chrome
-debian/tmp/@LIBDIR@/omni.jar @LIBDIR@
